--- a/index.html
+++ b/index.html
@@ -1,36 +1,138 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Daniel Salles - Engenharia</title>
-  <style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Daniel Salles - Engenharia</title>
+<style>
+  /* Reset simples */
+  * { margin: 0; padding: 0; box-sizing: border-box; }
+  
+  body {
+    font-family: "Courier New", Courier, monospace;
+    background-color: #0d1117;
+    color: #e6edf3;
+    line-height: 1.6;
+    display: flex;
+    min-height: 100vh;
+  }
+
+  /* Menu lateral */
+  nav {
+    width: 220px;
+    background-color: #161b22;
+    padding: 20px;
+    flex-shrink: 0;
+  }
+  nav h2 {
+    font-size: 18px;
+    margin-bottom: 20px;
+    color: #58a6ff;
+  }
+  nav a {
+    display: block;
+    color: #e6edf3;
+    text-decoration: none;
+    margin-bottom: 10px;
+  }
+  nav a:hover {
+    color: #58a6ff;
+  }
+
+  /* Conteúdo principal */
+  main {
+    flex: 1;
+    padding: 40px;
+  }
+  main h1 {
+    font-size: 28px;
+    margin-bottom: 15px;
+    color: #58a6ff;
+  }
+  main p {
+    margin-bottom: 20px;
+  }
+  footer {
+    margin-top: 40px;
+    font-size: 14px;
+    opacity: 0.7;
+  }
+
+  /* Links de destaque */
+  .link-button {
+    display: inline-block;
+    padding: 6px 12px;
+    margin: 4px 0;
+    border: 1px solid #58a6ff;
+    color: #58a6ff;
+    text-decoration: none;
+    font-size: 14px;
+  }
+  .link-button:hover {
+    background-color: #58a6ff;
+    color: #0d1117;
+  }
+
+  /* Responsividade simples */
+  @media (max-width: 768px) {
     body {
-      background-color: #0d1117;
-      color: #e6edf3;
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 40px;
-      text-align: center;
+      flex-direction: column;
     }
-    h1 {
-      color: #58a6ff;
-      margin-bottom: 10px;
+    nav {
+      width: 100%;
+      display: flex;
+      overflow-x: auto;
     }
-    p {
-      font-size: 18px;
-      opacity: 0.9;
+    nav a {
+      margin-right: 15px;
     }
-    footer {
-      margin-top: 40px;
-      font-size: 14px;
-      opacity: 0.7;
+    main {
+      padding: 20px;
     }
-  </style>
+  }
+</style>
 </head>
 <body>
+
+<!-- Menu lateral -->
+<nav>
+  <h2>Menu</h2>
+  <a href="#sobre">Sobre</a>
+  <a href="#projetos">Projetos</a>
+  <a href="#contato">Contato</a>
+  <a href="#links">Links</a>
+</nav>
+
+<!-- Conteúdo principal -->
+<main>
   <h1>Bem-vindo ao site de Daniel Salles ⚙️</h1>
   <p>Engenharia Elétrica | Automação | Projetos & Ideias</p>
+
+  <section id="sobre">
+    <h2>Sobre</h2>
+    <p>Sou estudante de Engenharia Elétrica na UNIFEI, apaixonado por automação, sistemas elétricos e eficiência em projetos.</p>
+  </section>
+
+  <section id="projetos">
+    <h2>Projetos</h2>
+    <p>Aqui você encontra alguns dos meus projetos pessoais e acadêmicos.</p>
+    <a class="link-button" href="#">Projeto 1</a>
+    <a class="link-button" href="#">Projeto 2</a>
+  </section>
+
+  <section id="contato">
+    <h2>Contato</h2>
+    <p>Email: <a href="mailto:danielsalles@example.com">danielsalles@example.com</a></p>
+  </section>
+
+  <section id="links">
+    <h2>Links Úteis</h2>
+    <a class="link-button" href="https://github.com/danielsallesp" target="_blank">GitHub</a>
+    <a class="link-button" href="https://www.linkedin.com/in/danielsalles/" target="_blank">LinkedIn</a>
+  </section>
+
   <footer>© 2025 Daniel Salles</footer>
+</main>
+
 </body>
 </html>
