--- a/index.html
+++ b/index.html
@@ -1,101 +1,118 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Daniel Salles - Engenharia Elétrica e Automação</title>
-  <style>
-    body {
-      font-family: 'Arial', sans-serif;
-      background-color: #f4f4f4;
-      margin: 0;
-      padding: 0;
-      color: #333;
-    }
-    header {
-      background-color: #333;
-      color: #fff;
-      padding: 10px 0;
-      text-align: center;
-    }
-    nav {
-      background-color: #444;
-      overflow: hidden;
-    }
-    nav a {
-      float: left;
-      display: block;
-      color: white;
-      text-align: center;
-      padding: 14px 20px;
-      text-decoration: none;
-    }
-    nav a:hover {
-      background-color: #ddd;
-      color: black;
-    }
-    section {
-      padding: 20px;
-      margin: 20px;
-      background-color: #fff;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    }
-    footer {
-      background-color: #333;
-      color: white;
-      text-align: center;
-      padding: 10px 0;
-      position: fixed;
-      width: 100%;
-      bottom: 0;
-    }
-    .cotacoes {
-      display: flex;
-      justify-content: space-around;
-      margin-top: 20px;
-    }
-    .cotacao {
-      background-color: #e2e2e2;
-      padding: 10px;
-      border-radius: 8px;
-      width: 30%;
-      text-align: center;
-    }
-    .cotacao h3 {
-      margin: 0;
-    }
-    .cotacao p {
-      font-size: 1.2em;
-      font-weight: bold;
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Daniel Salles - Engenharia Elétrica e Automação</title>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f4f4f4;
+    color: #333;
+  }
+  header {
+    background-color: #222;
+    color: #fff;
+    text-align: center;
+    padding: 20px 0;
+  }
+  nav {
+    background-color: #333;
+    overflow: hidden;
+  }
+  nav a {
+    float: left;
+    display: block;
+    color: white;
+    text-decoration: none;
+    text-align: center;
+    padding: 14px 20px;
+  }
+  nav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  section {
+    padding: 20px;
+    margin: 20px;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  }
+  h2 { color: #222; }
+  footer {
+    background-color: #222;
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+  }
+  .noticia, .cotacao {
+    margin-bottom: 15px;
+    padding: 10px;
+    border-bottom: 1px solid #ccc;
+  }
+  .cotacoes {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+  }
+  .cotacao {
+    flex: 1 1 45%;
+    background-color: #e2e2e2;
+    border-radius: 6px;
+    margin: 10px;
+    padding: 10px;
+    text-align: center;
+  }
+  @media (max-width: 768px) {
+    nav a { float: none; display: block; text-align: left; }
+    .cotacao { flex: 1 1 100%; }
+  }
+</style>
 </head>
 <body>
 
 <header>
   <h1>Daniel Salles - Engenharia Elétrica e Automação</h1>
+  <p>Portal de notícias e informações atualizadas sobre energia e automação</p>
 </header>
 
 <nav>
   <a href="#sobre">Sobre</a>
   <a href="#projetos">Projetos</a>
-  <a href="#contato">Contato</a>
+  <a href="#noticias">Notícias</a>
   <a href="#cotacoes">Cotações</a>
+  <a href="#contato">Contato</a>
 </nav>
 
 <section id="sobre">
   <h2>Sobre Mim</h2>
-  <p>Sou estudante de Engenharia Elétrica na UNIFEI, apaixonado por automação e sistemas elétricos. Busco sempre aplicar meus conhecimentos em projetos inovadores e sustentáveis.</p>
+  <p>Sou estudante de Engenharia Elétrica na UNIFEI, apaixonado por automação e sistemas elétricos. Este site é dedicado a trazer informações e notícias atualizadas sobre o setor elétrico e projetos de engenharia.</p>
 </section>
 
 <section id="projetos">
-  <h2>Projetos Recentes</h2>
+  <h2>Projetos</h2>
   <ul>
-    <li><strong>Automação Residencial:</strong> Sistema inteligente de controle de iluminação e temperatura via aplicativo móvel.</li>
-    <li><strong>Monitoramento Solar:</strong> Plataforma para acompanhamento em tempo real da geração de energia solar fotovoltaica.</li>
-    <li><strong>Robô Seguidor de Linha:</strong> Protótipo de robô autônomo para competições de robótica.</li>
+    <li><strong>Automação Residencial:</strong> Controle inteligente de iluminação e temperatura via aplicativo.</li>
+    <li><strong>Monitoramento Solar:</strong> Plataforma de acompanhamento da geração de energia fotovoltaica.</li>
+    <li><strong>Robô Seguidor de Linha:</strong> Protótipo autônomo para competições acadêmicas.</li>
   </ul>
+</section>
+
+<section id="noticias">
+  <h2>Notícias Recentes</h2>
+  <div id="noticias-lista">
+    <p>Carregando notícias...</p>
+  </div>
+</section>
+
+<section id="cotacoes">
+  <h2>Cotações em Tempo Real</h2>
+  <div class="cotacoes" id="cotacoes-lista">
+    <p>Carregando cotações...</p>
+  </div>
 </section>
 
 <section id="contato">
@@ -104,42 +121,63 @@
   <p>LinkedIn: <a href="https://www.linkedin.com/in/danielsallesp" target="_blank">linkedin.com/in/danielsallesp</a></p>
 </section>
 
-<section id="cotacoes">
-  <h2>Cotações em Tempo Real</h2>
-  <div class="cotacoes">
-    <div class="cotacao" id="cotacao-dolar">
-      <h3>Dólar (USD)</h3>
-      <p id="valor-dolar">Carregando...</p>
-    </div>
-    <div class="cotacao" id="cotacao-euro">
-      <h3>Euro (EUR)</h3>
-      <p id="valor-euro">Carregando...</p>
-    </div>
-  </div>
-</section>
-
 <footer>
   <p>&copy; 2025 Daniel Salles. Todos os direitos reservados.</p>
 </footer>
 
 <script>
-  async function obterCotacoes() {
-    try {
-      const resposta = await fetch('https://economia.awesomeapi.com.br/json/last/USD-BRL,EUR-BRL');
-      const dados = await resposta.json();
-
-      const cotacaoDolar = dados.USDBRL;
-      const cotacaoEuro = dados.EURBRL;
-
-      document.getElementById('valor-dolar').textContent = `R$ ${cotacaoDolar.bid}`;
-      document.getElementById('valor-euro').textContent = `R$ ${cotacaoEuro.bid}`;
-    } catch (erro) {
-      console.error('Erro ao obter cotações:', erro);
-    }
+// Carregar notícias da ANEEL via RSS
+async function carregarNoticias() {
+  try {
+    const resposta = await fetch('https://cors-anywhere.herokuapp.com/https://www.aneel.gov.br/web/guest/rss-noticias');
+    const xml = await resposta.text();
+    const parser = new DOMParser();
+    const doc = parser.parseFromString(xml, 'application/xml');
+    const items = doc.querySelectorAll('item');
+    const lista = document.getElementById('noticias-lista');
+    lista.innerHTML = '';
+    items.forEach(item => {
+      const titulo = item.querySelector('title').textContent;
+      const link = item.querySelector('link').textContent;
+      const descricao = item.querySelector('description').textContent;
+      const div = document.createElement('div');
+      div.classList.add('noticia');
+      div.innerHTML = `<h3><a href="${link}" target="_blank">${titulo}</a></h3><p>${descricao}</p>`;
+      lista.appendChild(div);
+    });
+  } catch (erro) {
+    console.error('Erro ao carregar notícias:', erro);
+    document.getElementById('noticias-lista').innerHTML = '<p>Não foi possível carregar notícias.</p>';
   }
+}
 
-  obterCotacoes();
-  setInterval(obterCotacoes, 60000); // Atualiza a cada 60 segundos
+// Carregar cotações do dólar e euro via AwesomeAPI
+async function carregarCotacoes() {
+  try {
+    const resposta = await fetch('https://economia.awesomeapi.com.br/last/USD-BRL,EUR-BRL');
+    const dados = await resposta.json();
+    const lista = document.getElementById('cotacoes-lista');
+    lista.innerHTML = '';
+    const moedas = ['USD', 'EUR'];
+    moedas.forEach(moeda => {
+      const div = document.createElement('div');
+      div.classList.add('cotacao');
+      div.innerHTML = `<h3>${moeda}</h3><p>Compra: R$ ${dados[`${moeda}BRL`].bid}</p><p>Venda: R$ ${dados[`${moeda}BRL`].ask}</p>`;
+      lista.appendChild(div);
+    });
+  } catch (erro) {
+    console.error('Erro ao carregar cotações:', erro);
+    document.getElementById('cotacoes-lista').innerHTML = '<p>Não foi possível carregar cotações.</p>';
+  }
+}
+
+// Carregar tudo ao abrir a página
+window.onload = () => {
+  carregarNoticias();
+  carregarCotacoes();
+  setInterval(carregarNoticias, 3600000); // atualizar notícias a cada 1 hora
+  setInterval(carregarCotacoes, 60000); // atualizar cotações a cada 1 minuto
+};
 </script>
 
 </body>
